--- a/UserManager/UserManager/Base.lproj/Main.storyboard
+++ b/UserManager/UserManager/Base.lproj/Main.storyboard
@@ -330,7 +330,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7jK-DK-ZO3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1066" y="892"/>
+            <point key="canvasLocation" x="1918" y="781"/>
         </scene>
         <!--User Profile View Controller-->
         <scene sceneID="fZ0-yb-jrL">
@@ -633,12 +633,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <color key="separatorColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.45098039220000002" green="0.72941176470000002" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="separatorColor" red="0.1843137255" green="0.32549019610000002" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="sectionIndexColor" red="0.45098039220000002" green="0.72941176470000002" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="sectionIndexBackgroundColor" red="0.1843137255" green="0.32549019610000002" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search..." id="BZ5-ak-lbG">
                             <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" red="0.1843137255" green="0.32549019610000002" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="barTintColor" red="0.1843137255" green="0.32549019610000002" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <textInputTraits key="textInputTraits"/>
                             <scopeButtonTitles>
                                 <string>Title</string>
@@ -650,7 +653,7 @@
                                 <rect key="frame" x="0.0" y="72" width="375" height="76"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c8s-rP-MzD" id="Lka-04-AYc">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="75.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Datail User Info" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxb-Y9-5GM">
@@ -702,7 +705,9 @@
                                 <color key="backgroundColor" red="0.1843137255" green="0.32549019610000002" blue="0.3803921569" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
                                     <outlet property="detailUserInfo" destination="vxb-Y9-5GM" id="dly-a2-UMb"/>
+                                    <outlet property="userIcon" destination="xQy-Cb-ckU" id="4h8-KH-Sj0"/>
                                     <outlet property="userLogin" destination="dvV-sa-3yU" id="mN1-qF-OBj"/>
+                                    <segue destination="Fe9-ct-BMg" kind="show" identifier="ASEditUserSequeID" id="5To-8V-l5I"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -713,10 +718,12 @@
                     </tableView>
                     <nil key="simulatedStatusBarMetrics"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="sJK-lK-cRh">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
                     <connections>
                         <outlet property="usersTableView" destination="Xt2-Zp-DFy" id="x8V-sz-wmI"/>
+                        <segue destination="Fe9-ct-BMg" kind="show" identifier="ASAddUserSequeID" id="w9l-bb-tdF"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2uN-oD-2q2" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -729,6 +736,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="iTg-KD-VzO" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="vXZ-d6-0EJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -747,5 +755,8 @@
         <image name="Hamelion" width="476" height="241"/>
         <image name="Hamelion Head" width="120" height="120"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="5To-8V-l5I"/>
+    </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.0078431372549019607" green="0.6588235294117647" blue="0.5725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
